# DOAJ_Reviewer

./: .gitignore  CHANGELOG.md  CODESPACES_GUIDE_EN.md  CONTRIBUTING.md  LAPORAN_PROYEK_2026-02-16.md  LICENSE  README.md  RELEASE_NOTES_TEMPLATE.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  golden-regression.yml  review-submission.yml  uat-scenarios.yml
examples/: submission.example.json  submission.raw.example.json  submissions_batch.template.csv
scripts/: export_docx.sh
specs/reviewer/: README.md
specs/reviewer/golden/: golden-cases.v1.json
specs/reviewer/rules/: endogeny.v1.yaml  ruleset.must.v1.json
specs/reviewer/schemas/: endogeny-evaluation.schema.json  submission-raw.schema.json  submission.schema.json
specs/reviewer/templates/: endogeny-audit-report.md
src/doaj_reviewer/: __init__.py  basic_rules.py  endogeny.py  evaluate.py  golden.py  intake.py  reporting.py  review.py  sim_server.py  spreadsheet_batch.py  uat.py  web.py
tests/: test_basic_rules.py  test_endogeny.py  test_golden_dataset.py  test_intake.py  test_review.py  test_sim_server.py  test_spreadsheet_batch.py  test_uat.py  test_web.py
