[project]
name = "doaj-reviewer"
version = "0.1.0"
description = "Online reviewer pipeline for DOAJ application checks"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "DOAJ Reviewer Team"}]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
